--- a/app/src/main/res/layout/activity_fullscreen.xml
+++ b/app/src/main/res/layout/activity_fullscreen.xml
@@ -30,16 +30,42 @@
             android:background="#40000000"
             android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/buzzer"
-                android:layout_width="40dp"
+            <LinearLayout
+                android:layout_width="50dp"
                 android:layout_height="match_parent"
-                android:layout_marginRight="10dp"
-                android:clickable="true"
-                android:focusable="true"
-                android:background="?android:attr/selectableItemBackground"
-                android:src="@drawable/ic_buzzer_on"/>
+                android:orientation="vertical">
 
+                <ImageView
+                    android:id="@+id/buzzer"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:layout_marginRight="10dp"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:background="?android:attr/selectableItemBackground"
+                    android:src="@drawable/ic_buzzer_on"/>
+
+                    <RelativeLayout
+                        android:layout_width="50dp"
+                        android:layout_weight="1"
+                        android:layout_height="0dp">
+                        <ImageView
+                            android:id="@+id/battery"
+                            android:clickable="true"
+                            android:src="@drawable/ic_battery"
+                            android:layout_height="match_parent"
+                            android:layout_width="match_parent" />
+                        <TextView
+                            android:id="@+id/batt_percent"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:textColor="#0000FF"
+                            android:textStyle="bold"
+                            android:text="\?"
+                            android:gravity="center"/>
+                    </RelativeLayout>
+            </LinearLayout>
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -147,14 +173,6 @@
                     android:text="V: -m/s"/>
             </LinearLayout>
 
-            <ImageView
-                android:id="@+id/battery"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="5dp"
-                android:clickable="true"
-                android:src="@drawable/ic_battery"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
