--- a/app/src/main/res/layout/sondetype.xml
+++ b/app/src/main/res/layout/sondetype.xml
@@ -8,33 +8,70 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="25dp"
-        android:textSize="30dp"
+        android:textSize="40dp"
         android:layout_gravity="center_horizontal"
-        android:text="Sonde data"/>
+        android:text="Sonde settings"/>
 
-    <Spinner
-        android:id="@+id/type"
+    <LinearLayout
         android:layout_width="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginBottom="15dp"
-        android:entries="@array/sonde_types"/>
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="30dp"
+            android:text="Type"/>
+        <Spinner
+            android:id="@+id/type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="15dp"
+            android:entries="@array/sonde_types"/>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-        <EditText
-            android:id="@+id/freq"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="numberDecimal"
-            android:text="403.000"/>
+        <NumberPicker
+            android:id="@+id/f100"
+            android:gravity="center"
+            android:layout_marginLeft="20dp"
+            android:layout_width="30dp"
+            android:layout_height="wrap_content"/>
+        <NumberPicker
+            android:id="@+id/f10"
+            android:layout_width="30dp"
+            android:gravity="center"
+            android:layout_height="wrap_content"/>
+        <NumberPicker
+            android:id="@+id/f1"
+            android:layout_width="30dp"
+            android:layout_height="wrap_content"/>
+        <NumberPicker
+            android:id="@+id/f_1"
+            android:layout_marginLeft="15dp"
+            android:layout_width="30dp"
+            android:layout_height="wrap_content"/>
+        <NumberPicker
+            android:id="@+id/f_01"
+            android:layout_width="30dp"
+            android:layout_height="wrap_content"/>
+        <NumberPicker
+            android:id="@+id/f_001"
+            android:layout_width="30dp"
+            android:layout_height="wrap_content"/>
+
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
+            android:gravity="center_vertical"
+            android:textSize="30dp"
+            android:layout_marginLeft="20dp"
             android:hint="frequency"
             android:text="MHz"/>
     </LinearLayout>
