--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,37 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".SettingsActivity">
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools">
 
-        <com.google.android.material.appbar.AppBarLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:theme="@style/Theme.TrovaLaSonda.AppBarOverlay">
+		<androidx.coordinatorlayout.widget.CoordinatorLayout
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:fitsSystemWindows="true"
+			tools:context=".SettingsActivity">
 
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
-                app:popupTheme="@style/Theme.TrovaLaSonda.PopupOverlay" />
+			<com.google.android.material.appbar.AppBarLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:theme="@style/Theme.TrovaLaSonda.AppBarOverlay">
 
-        </com.google.android.material.appbar.AppBarLayout>
+				<androidx.appcompat.widget.Toolbar
+					android:id="@+id/toolbar"
+					android:layout_width="match_parent"
+					android:layout_height="?attr/actionBarSize"
+					android:background="?attr/colorPrimary"
+					app:popupTheme="@style/Theme.TrovaLaSonda.PopupOverlay" />
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="@dimen/fab_margin"
-            app:srcCompat="@android:drawable/ic_menu_send"
-            android:contentDescription="Save" />
+			</com.google.android.material.appbar.AppBarLayout>
 
-        <include layout="@layout/content_settings"
-            android:id="@+id/content"/>
+					<com.google.android.material.floatingactionbutton.FloatingActionButton
+						android:id="@+id/fab"
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:layout_gravity="bottom|end"
+						android:layout_margin="@dimen/fab_margin"
+						app:srcCompat="@android:drawable/ic_menu_send"
+						android:contentDescription="Save" />
 
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+			<androidx.core.widget.NestedScrollView
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content">
+				<LinearLayout
+					app:layout_behavior="@string/appbar_scrolling_view_behavior"
+					android:layout_height="wrap_content"
+					android:layout_width="match_parent">
+						<include
+							layout="@layout/content_settings"
+							android:id="@+id/content"/>
+					</LinearLayout>
+			</androidx.core.widget.NestedScrollView>
+		</androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
